--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,6 +5,9 @@
   <title>Title</title>
 </head>
 <body>
-  <h1>Home</h1>
+<h1>Home</h1>
+{% if request.user.is_authenticated %}
+  <a href="{% url 'logout' %}">Logout</a>
+{% endif %}
 </body>
 </html>
