--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
+    <title>Login Sign Up Page</title>
+    <link rel="stylesheet" href="{% static 'style/login.css' %}">
+    <meta charset="UTF-8">
+
 </head>
 <body>
-<form method="post">
-  {% csrf_token %} {# Cross site request forgery protection #}
-  <div class="card-body">
-    {{ form.as_p }}
-  </div>
-  <div class="card-footer text-center">
-    <button type="submit" class="btn btn-outline-success">Login</button>
-{#    <a href="{% url 'password_reset' %}" class="btn btn-danger">Reset password</a>#}
-  </div>
-</form>
+<div class="main">
+    <input type="checkbox" id="chk" aria-hidden="true">
+
+    <div class="signup">
+        <form>
+          {% csrf_token %}
+            <label for="chk" aria-hidden="true">Sign up</label>
+            <input type="text" name="username" placeholder="User name" required="">
+            <input type="email" name="email" placeholder="E-mail" required="">
+            <input type="password" name="password" placeholder="Password" required="">
+            <button>Sign up</button>
+        </form>
+    </div>
+
+    <div class="login">
+        <form method="POST">
+          {% csrf_token %}
+            <label for="chk" aria-hidden="true">Login</label>
+            {{ form.username }}
+            {{ form.password }}
+            <button type="submit">Login</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
