--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -40,7 +40,11 @@
 
 <section class="login-system">
     <div style="position:sticky; right: 50px; bottom: 50px;">
-        123
+        {% if request.user.is_authenticated %}
+          <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+          <a href="{% url 'login' %}">Login</a>
+        {% endif %}
     </div>
 
 </section>
@@ -50,7 +54,7 @@
 
   <div class="wrap wrap--1">
     <div class="card-container card-container--1">
-      <p>01. Normal</p>
+      <p>01.Normal</p>
     </div>
   </div>
 
