--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,16 +8,27 @@
 
 </head>
 <body>
+      {% if messages %}
+          {% for message in messages %}
+            <div>{{ message }}</div>
+          {% endfor %}
+      {% endif %}
 <div class="main">
     <input type="checkbox" id="chk" aria-hidden="true">
 
     <div class="signup">
-        <form>
+        <form method="POST">
           {% csrf_token %}
             <label for="chk" aria-hidden="true">Sign up</label>
-            <input type="text" name="username" placeholder="User name" required="">
-            <input type="email" name="email" placeholder="E-mail" required="">
-            <input type="password" name="password" placeholder="Password" required="">
+{#            <input type="text" name="username" placeholder="User name" required="">#}
+{#            <input type="email" name="email" placeholder="E-mail" required="">#}
+{#            <input type="password" name="password" placeholder="Password" required="">#}
+{#            {{ form.first_name }}#}
+{#            {{ form.last_name }}#}
+            {{ form.email }}
+            {{ form.username }}
+            {{ form.password1 }}
+            {{ form.password2 }}
             <button>Sign up</button>
         </form>
     </div>
@@ -26,8 +37,9 @@
         <form method="POST">
           {% csrf_token %}
             <label for="chk" aria-hidden="true">Login</label>
-            {{ form.username }}
-            {{ form.password }}
+            <input type="hidden" name="flag" value="login">
+            <input type="text" name="user-login" placeholder="Username" required="">
+            <input type="password" name="password-login" placeholder="Password" required="">
             <button type="submit">Login</button>
         </form>
     </div>
