--- a/static/style/style.css
+++ b/static/style/style.css
@@ -4,132 +4,212 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-image: linear-gradient(180deg, #06171E, #005351);
+    height: 100vh;
 }
 
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 h1 {
-  font-size: 3.2rem;
-  padding-top: 2rem;
+    font-size: 3.2rem;
+    padding-top: 2rem;
 }
 
-h1+p {
-  font-size: 1.8rem;
-  padding: 2rem 0 3rem;
+h1 + p {
+    font-size: 1.8rem;
+    padding: 2rem 0 3rem;
 }
 
 .main {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
+.sticky-user {
+    position: -webkit-sticky;
+    position: sticky;
+    right: 50px;
+    bottom: 50px;
+    max-width: 350px;
+    height: 200px;
+    width: 100%;
+    margin-left: auto;
+    background-color: #FEB236;
+    border-radius: 15px;
+    box-shadow: 11px 12px 2rem 0.5rem hsl(0deg 0% 0% / 40%);
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-flow: column;
+}
+
+.sticky-wrapper {
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row;
+    align-content: center;
+}
+
+.sticky-user h4 {
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
+    color: black;
+}
+
+.arrow {
+    max-width: 50px;
+    max-height: 50px;
+    display: none;
+}
+
+.login-relative {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.login-relative:hover .arrow {
+    display: block;
+    position: absolute;
+    bottom: 50px;
+    animation: fade-in .2s;
+}
+
+.sticky-user a {
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: 12px;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.sticky-user a:hover {
+    color: black;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0%;
+        bottom: 100px;
+    }
+    to {
+        opacity: 100%;
+        bottom: 50px;
+    }
+}
+
+
+
 .wrap {
-  margin: 2rem;
+    margin: 2rem;
 
-  transform-style: preserve-3d;
-  transform: perspective(100rem);
+    transform-style: preserve-3d;
+    transform: perspective(100rem);
 
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .card-container {
-  --rX: 0;
-  --rY: 0;
-  --bX: 50%;
-  --bY: 80%;
+    --rX: 0;
+    --rY: 0;
+    --bX: 50%;
+    --bY: 80%;
 
-  width: 30rem;
-  height: 36rem;
-  border: 1px solid var(--background-color);
-  border-radius: 1.6rem;
-  padding: 4rem;
+    width: 30rem;
+    height: 36rem;
+    border: 1px solid var(--background-color);
+    border-radius: 1.6rem;
+    padding: 4rem;
 
-  display: flex;
-  align-items: flex-end;
+    display: flex;
+    align-items: flex-end;
 
-  position: relative;
-  transform: rotateX(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
+    position: relative;
+    transform: rotateX(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
 
-  background: linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, .1)), url("/static/media/mario-gfae04e06c_1920.png") no-repeat;
-  background-position: var(--bX) var(--bY);
-  background-size: cover;
-  box-shadow: 0 0 3rem .5rem hsla(0, 0%, 0%, .2);
+    background: linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, .1)), url("/static/media/mario-gfae04e06c_1920.png") no-repeat;
+    background-position: var(--bX) var(--bY);
+    background-size: cover;
+    box-shadow: 0 0 3rem .5rem hsla(0, 0%, 0%, .2);
 
-  transition: transform .6s 1s;
+    transition: transform .6s 1s;
 }
 
 .card-container::before,
 .card-container::after {
-  content: "";
+    content: "";
 
-  width: 2rem;
-  height: 2rem;
-  border: 1px solid #fff;
+    width: 2rem;
+    height: 2rem;
+    border: 1px solid #fff;
 
-  position: absolute;
-  z-index: 2;
+    position: absolute;
+    z-index: 2;
 
-  opacity: .3;
-  transition: .3s;
+    opacity: .3;
+    transition: .3s;
 }
 
 .card-container::before {
-  top: 2rem;
-  right: 2rem;
+    top: 2rem;
+    right: 2rem;
 
-  border-bottom-width: 0;
-  border-left-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
 }
 
 .card-container::after {
-  bottom: 2rem;
-  left: 2rem;
+    bottom: 2rem;
+    left: 2rem;
 
-  border-top-width: 0;
-  border-right-width: 0;
+    border-top-width: 0;
+    border-right-width: 0;
 }
 
 .card-container--active {
-  transition: none;
+    transition: none;
 }
 
 .card-container--2 {
-  filter: hue-rotate(80deg) saturate(140%);
+    filter: hue-rotate(80deg) saturate(140%);
 }
 
 .card-container--3 {
-  filter: hue-rotate(160deg) saturate(140%);
+    filter: hue-rotate(160deg) saturate(140%);
 }
 
 .card-container p {
-  color: hsla(0, 0%, 100%, .6);
-  font-size: 2.2rem;
+    color: hsla(0, 0%, 100%, .6);
+    font-size: 2.2rem;
+    margin-bottom: auto;
 }
+
 
 .wrap:hover .card-container::before,
 .wrap:hover .card-container::after {
-  width: calc(100% - 4rem);
-  height: calc(100% - 4rem);
+    width: calc(100% - 4rem);
+    height: calc(100% - 4rem);
 }
 
 .abs-site-link {
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
-  color: hsla(0, 0%, 0%, .6);
-  font-size: 1.6rem;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    color: hsla(0, 0%, 0%, .6);
+    font-size: 1.6rem;
 }
 
 .main-text {
