Added front end for task page

--- a/templates/homepage_guest.html
+++ b/templates/homepage_guest.html
@@ -10,64 +10,64 @@
 
 <section class="main-text">
     <div class="homepage-text-container">
-    <div>
-        <p class="white">Mixing </p>
-        <p>
-            <span class="word one orange">Fun</span>
-            <span class="word one light-orange">Games</span>
-        </p>
+        <div>
+            <p class="white">Mixing </p>
+            <p>
+                <span class="word one orange">Fun</span>
+                <span class="word one light-orange">Games</span>
+            </p>
+        </div>
+        <div>
+            <p class="white">with </p>
+            <p>
+                <span class="word two orange">Work</span>
+                <span class="word two light-orange">Task Tracking</span>
+            </p>
+        </div>
+        <div>
+            <p class="white">to create </p>
+            <p>
+                <span class="word three yellow">Fun Track</span>
+            </p>
+        </div>
     </div>
-    <div>
-        <p class="white">with </p>
-        <p>
-            <span class="word two orange">Work</span>
-            <span class="word two light-orange">Task Tracking</span>
-        </p>
-    </div>
-    <div>
-        <p class="white">to create </p>
-        <p>
-            <span class="word three yellow">Fun Track</span>
-        </p>
-    </div>
-</div>
 </section>
-
-<section  class="what-do-we-do">
-
-</section>
-
-<section class="login-system">
-    <div style="position:sticky; right: 50px; bottom: 50px;">
-        123
-    </div>
-
-</section>
-
 
 <section class="main">
 
-  <div class="wrap wrap--1">
-    <div class="card-container card-container--1">
-      <p>01. Normal</p>
+    <div class="wrap wrap--1">
+        <div class="card-container card-container--1">
+            <p>We are great</p>
+        </div>
     </div>
-  </div>
 
-  <div class="wrap wrap--2">
-    <div class="card-container card-container--2">
-      <p>02. Reverse</p>
+    <div class="wrap wrap--2">
+        <div class="card-container card-container--2">
+            <p>We track tasks the best</p>
+        </div>
     </div>
-  </div>
 
-  <div class="wrap wrap--3">
-    <div class="card-container card-container--3">
-      <p>03. Normal</p>
+    <div class="wrap wrap--3">
+        <div class="card-container card-container--3">
+            <p>Don't know what the fuck to write here</p>
+        </div>
     </div>
-  </div>
 
 </section>
 
-<section>
+<section class="sticky-user">
+    <h4>No account yet?<br>
+        No problem!</h4>
+    <div class="sticky-wrapper">
+        <div class="pos-relative login-relative">
+            <img class="arrow" src="../static/media/pixel-arrow-final.png" alt="">
+            <a>Login</a>
+        </div>
+        <div class="pos-relative login-relative">
+            <img class="arrow" src="../static/media/pixel-arrow-final.png" alt="">
+            <a>Register</a>
+        </div>
+    </div>
 </section>
 </body>
 <script src="../static/script/javascript.js"></script>
