--- a/templates/tasks/update_tasks.html
+++ b/templates/tasks/update_tasks.html
@@ -7,15 +7,48 @@
 <body>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <label for="assign-to">Assign To: </label>
-    <select name="assign-to">
-        {% for user in users %}
-            <option value='{{ user.id }}'>{{ user.username }}</option>
+    {% if current_user.is_manager %}
+        {{ form.as_p }}
+        <label for="active"> Task status: </label>
+        <select name="active">
+            <option value="0">Finished</option>
+            <option value="1">On going</option>
+        </select>
+        <br>
+        <label for="assign-to">Assign To: </label>
+        <select name="assign-to">
+            {% for user in users %}
+                <option value='{{ user.id }}'>{{ user.username }}</option>
 
-        {% endfor %}
+            {% endfor %}
+        </select>
 
-    </select>
+        <div style="display: none">
+        <textarea>
+
+        </textarea>
+        </div>
+    {% else %}
+        <div style="display: none">
+            {{ form.as_p }}
+            <label for="active"> Task status: </label>
+            <select name="active">
+                <option value="0">Finished</option>
+                <option value="1">On going</option>
+            </select>
+            <br>
+            <label for="assign-to">Assign To: </label>
+            <select name="assign-to">
+                {% for user in users %}
+                    <option value='{{ user.id }}'>{{ user.username }}</option>
+
+                {% endfor %}
+            </select>
+        </div>
+        <textarea name="text_box">
+
+        </textarea>
+    {% endif %}
     <br>
     <button type="submit">Update Task</button>
 </form>
