--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -34,45 +34,42 @@
 </div>
 </section>
 
-<section  class="what-do-we-do">
-
-</section>
-
-<section class="login-system">
-    <div style="position:sticky; right: 50px; bottom: 50px;">
-        {% if request.user.is_authenticated %}
-          <a href="{% url 'logout' %}">Logout</a>
-        {% else %}
-          <a href="{% url 'login' %}">Login</a>
-        {% endif %}
-    </div>
-
-</section>
-
 
 <section class="main">
 
-  <div class="wrap wrap--1">
-    <div class="card-container card-container--1">
-      <p>01.Normal</p>
+    <div class="wrap wrap--1">
+        <div class="card-container card-container--1">
+            <p>We are great</p>
+        </div>
     </div>
-  </div>
 
-  <div class="wrap wrap--2">
-    <div class="card-container card-container--2">
-      <p>02. Reverse</p>
+    <div class="wrap wrap--2">
+        <div class="card-container card-container--2">
+            <p>We track tasks the best</p>
+        </div>
     </div>
-  </div>
 
-  <div class="wrap wrap--3">
-    <div class="card-container card-container--3">
-      <p>03. Normal</p>
+    <div class="wrap wrap--3">
+        <div class="card-container card-container--3">
+            <p>Don't know what the fuck to write here</p>
+        </div>
     </div>
-  </div>
 
 </section>
 
-<section>
+<section class="sticky-user">
+    <h4>No account yet?<br>
+        No problem!</h4>
+    <div class="sticky-wrapper">
+        <div class="pos-relative login-relative">
+            <img class="arrow" src="{% static 'media/pixel-arrow-final.png' %}" alt="">
+            <a href="{% url 'login' %}">Login</a>
+        </div>
+        <div class="pos-relative login-relative">
+            <img class="arrow" src="{% static 'media/pixel-arrow-final.png' %}" alt="">
+            <a href="{% url 'login' %}">Register</a>
+        </div>
+    </div>
 </section>
 </body>
 <script src="{% static 'script/javascript.js' %}"></script>
