--- a/templates/tracking-page.html
+++ b/templates/tracking-page.html
@@ -238,11 +238,7 @@
                             12 Mar, 2019
                         </div>
                         <div class="mail-inside">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan
-                            commodo lectus gravida dictum. Aliquam a dui eu arcu hendrerit porta sed in velit. Fusce eu
-                            semper magna. Aenean porta facilisis neque, ac dignissim magna vestibulum eu. Etiam id
-                            ligula eget neque placerat ultricies in sed neque. Nam vitae rutrum est. Etiam non
-                            condimentum ante, eu consequat orci. Aliquam a dui eu arcu hendrerit porta sed in velit.
-                            Fusce eu semper magna.
+                            commodo lectus gravida dictum.
                         </div>
                         <div class="mail-assign">
                             <div class="assignee">
