--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -41,7 +41,7 @@
     <div class="mail-contents-subject">
       <input type="checkbox" name="msg" id="mail20" class="mail-choice" checked>
       <label for="mail20"></label>
-      <div class="mail-contents-title">{{ query.name }}</div>
+      <div class="mail-contents-title">{{ task_name }}</div>
     </div>
     <div class="mail">
       <div class="mail-time">
@@ -53,22 +53,22 @@
         </svg>
         12 Mar, 2019
       </div>
-      <div class="mail-inside">{{ query.description }}
+      <div class="mail-inside">{{ task_description }}
       </div>
       <div class="mail-assign">
         <div class="assignee">
-          <strong>George Rusu</strong> assigned to Natalie Smith.
-          <span class="assign-date">25 Nov, 2019</span>
-        </div>
-        <div class="assignee">
-          <strong>George Rusu</strong> added to Marketing.
-          <span class="assign-date">18 Feb, 2019</span>
-        </div>
-        <div class="assignee">
-          <strong>George Rusu </strong> created task.
-          <span class="assign-date">18 Feb, 2019</span>
+          <strong>{{ task_creator }} </strong> created task
+          <span class="assign-date">on {{ task_updated }} </span>
         </div>
       </div>
+      {% for comment_creator, comment_body in comments.items %}
+        <div class="mail-assign">
+          <div class="assignee">
+            <strong>{{ comment_creator }} </strong> :
+            <span class="assign-date"> {{ comment_body }} </span>
+          </div>
+        </div>
+      {% endfor %}
       <div class="mail-checklist">
         <input type="checkbox" name="msg" id="mail30" class="mail-choice" checked>
         <label for="mail30">Natalie completed this task.</label>
@@ -103,26 +103,34 @@
       </div>
     </div>
   </div>
-  <div class="mail-textarea">
-    <input type="text" placeholder="Write a comment...">
-    <div class="textarea-icons">
-      <div class="attach">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-             stroke-linejoin="round" class="feather feather-paperclip">
-          <path
-              d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
-        </svg>
-      </div>
-      <div class="send">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-             stroke-linejoin="round" class="feather feather-send">
-          <path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/>
-        </svg>
+  <form method="post" action="{% url 'task_comment' %}">
+    {% csrf_token %}
+    <div class="mail-textarea">
+      <input type="hidden" name="task" value="{{ task_id }}">
+      <input type="hidden" name="creator" value="{{ task_creator.id }}">
+      {{ comment_form.body }}
+      <div class="textarea-icons">
+        <div class="attach">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+               fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+               stroke-linejoin="round" class="feather feather-paperclip">
+            <path
+                d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
+          </svg>
+        </div>
+        <div class="send">
+          <label>
+            <input type="submit" style="display: none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                 stroke-linejoin="round" class="feather feather-send">
+              <path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/>
+            </svg>
+          </label>
+        </div>
       </div>
     </div>
-  </div>
+  </form>
 </div>
 
 
