--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,16 +8,17 @@
 
 </head>
 <body>
-      {% if messages %}
-          {% for message in messages %}
-            <div>{{ message }}</div>
-          {% endfor %}
-      {% endif %}
+{#      {% if messages %}#}
+{#          {% for message in messages %}#}
+{#            <div>{{ message }}</div>#}
+{#          {% endfor %}#}
+{#      {% endif %}#}
 <div class="main">
+  <h3 id="login_error" hidden>Username or password incorrect!</h3>
+  <h3 id="register_error" hidden>Username already exists or password didn't meet the requirements</h3>
     <input type="checkbox" id="chk" aria-hidden="true">
-
     <div class="signup">
-        <form method="POST">
+        <form method="POST" id="register_form">
           {% csrf_token %}
             <label for="chk" aria-hidden="true">Sign up</label>
 {#            <input type="text" name="username" placeholder="User name" required="">#}
@@ -34,12 +35,12 @@
     </div>
 
     <div class="login">
-        <form method="POST">
+        <form method="POST" id="login_form">
           {% csrf_token %}
             <label for="chk" aria-hidden="true">Login</label>
-            <input type="hidden" name="flag" value="login">
-            <input type="text" name="user-login" placeholder="Username" required="">
-            <input type="password" name="password-login" placeholder="Password" required="">
+            <input type="hidden" id="flag" name="flag" value="login">
+            <input type="text" id="user-login" name="user-login" placeholder="Username" required="">
+            <input type="password" id="password-login" name="password-login" placeholder="Password" required="">
             <button type="submit">Login</button>
         </form>
     </div>
