--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -73,5 +73,5 @@
 </section>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="{% static 'script/jquery.js' %}"></script>
+<script src="{% static 'script/javascript.js' %}"></script>
 </html>
