--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -11,53 +11,50 @@
 
 <section class="main-text">
     <div class="homepage-text-container">
-    <div>
-        <p class="white">Mixing </p>
-        <p>
-            <span class="word one orange">Fun</span>
-            <span class="word one light-orange">Games</span>
-        </p>
-    </div>
-    <div>
-        <p class="white">with </p>
-        <p>
-            <span class="word two orange">Work</span>
-            <span class="word two light-orange">Task Tracking</span>
-        </p>
-    </div>
-    <div>
-        <p class="white">to create </p>
-        <p>
-            <span class="word three yellow">Fun Track</span>
-        </p>
-    </div>
-</div>
-</section>
-
-
-<section class="main">
-
-    <div class="wrap wrap--1">
-        <div class="card-container card-container--1">
-            <p>We are great</p>
+        <div>
+            <p class="white">Mixing </p>
+            <p>
+                <span class="word one orange">Fun</span>
+                <span class="word one light-orange">Games</span>
+            </p>
+        </div>
+        <div>
+            <p class="white">with </p>
+            <p>
+                <span class="word two orange">Work</span>
+                <span class="word two light-orange">Task Tracking</span>
+            </p>
+        </div>
+        <div>
+            <p class="white">to create </p>
+            <p>
+                <span class="word three yellow">Fun Track</span>
+            </p>
         </div>
     </div>
 
-    <div class="wrap wrap--2">
-        <div class="card-container card-container--2">
-            <p>We track tasks the best</p>
+    <div class="main">
+        <div class="wrap wrap--1">
+            <div class="card-container card-container--1">
+                <p>We are great at making work fun!</p>
+            </div>
         </div>
+
+        <div class="wrap wrap--2">
+            <div class="card-container card-container--2">
+                <p>We help you track your tasks while tracking your evolution and enjoy the process!</p>
+            </div>
+        </div>
+
+        <div class="wrap wrap--3">
+            <div class="card-container card-container--3">
+                <p>You'll love our app when it's done! But for now, it's still in development. Good things take time!</p>
+            </div>
+        </div>
+
     </div>
 
-    <div class="wrap wrap--3">
-        <div class="card-container card-container--3">
-            <p>Don't know what the fuck to write here</p>
-        </div>
-    </div>
-
-</section>
-
-<section class="sticky-user">
+<div class="sticky-user">
     <h4>No account yet?<br>
         No problem!</h4>
     <div class="sticky-wrapper">
@@ -70,7 +67,9 @@
             <a href="{% url 'get_login_register' %}">Register</a>
         </div>
     </div>
+</div>
 </section>
+
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="{% static 'script/javascript.js' %}"></script>
