--- a/templates/homepage_guest.html
+++ b/templates/homepage_guest.html
@@ -37,13 +37,13 @@
 
     <div class="wrap wrap--1">
         <div class="card-container card-container--1">
-            <p>We are great</p>
+            <p>We are great at making work fun!</p>
         </div>
     </div>
 
     <div class="wrap wrap--2">
         <div class="card-container card-container--2">
-            <p>We track tasks the best</p>
+            <p>We help you track your tasks while tracking your evolution and enjoy the process!</p>
         </div>
     </div>
 
