--- a/static/style/login.css
+++ b/static/style/login.css
@@ -10,6 +10,7 @@ body {
 }
 
 .main {
+    position: relative;
     width: 350px;
     height: 500px;
     overflow: hidden;
@@ -25,7 +26,7 @@ body {
 .signup {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 104%;
 }
 
 label {
@@ -53,7 +54,7 @@ input {
 }
 
 button {
-    width: 60%;
+    width: 66%;
     height: 40px;
     margin: 20px auto 10px auto;
     justify-content: center;
@@ -73,6 +74,18 @@ button:hover {
     background: #005351;
 }
 
+#login_error, #register_error, #register_success {
+    position: absolute !important;
+    width: fit-content;
+    width: -moz-fit-content;
+    text-align: center;
+    top: 4%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    color: #fc9d01;
+}
+
 .login {
     height: 460px;
     background: #eee;
@@ -87,7 +100,7 @@ button:hover {
 }
 
 #chk:checked ~ .login {
-    transform: translateY(-500px);
+    transform: translateY(-525px);
 }
 
 #chk:checked ~ .login label {
