--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,7 +11,7 @@
 <div class="main">
   <h3 id="login_error" hidden>Username or password incorrect!</h3>
   <h3 id="register_error" hidden>Username already exists or password didn't meet the requirements</h3>
-  <h3 id="register_success" style="color: greenyellow" hidden>Register Successful! You can now login!</h3>
+  <h3 id="register_success" hidden>Register Successful! <br>You can now login!</h3>
     <input type="checkbox" id="chk" aria-hidden="true">
     <div class="signup">
         <form method="POST" id="register_form" action="{% url 'register' %}">
