The actual last commit

--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -72,8 +72,8 @@
             {% endfor %}
             <div class="mail-checklist">
                 <input type="checkbox" name="msg" id="mail30" class="mail-choice" checked>
-                <label for="mail30">Natalie completed this task.</label>
-                <div class="mail-checklist-date">19 May, 2020</div>
+                <label for="mail30">George completed this task.</label>
+                <div class="mail-checklist-date">Today</div>
             </div>
             <div class="mail-doc">
                 <div class="mail-doc-wrapper">
