--- a/static/style/tracking-page.css
+++ b/static/style/tracking-page.css
@@ -137,15 +137,60 @@ img {
 
 .dropdown-content {
     display: none;
-    z-index: 1;
+z-index: 1;
     position: absolute;
     padding: 12px 16px;
-    min-width: 160px;
-    background-color: pink;
+    width: 108px;
+    background-color: #eaeefc;
+    top: 91%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 11px;
+    text-align: center;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.notify:hover {
+    cursor: pointer;
+}
+
+.notify:hover svg {
+    fill: #113d3c;
+}
+
+.send:hover {
+    cursor: pointer;
+    background-color: #113d3c;
+}
+
+.dropdown-content a {
+    padding: 12px 16px;
+    display: block;
+    text-decoration: none;
+    color: #113d3c;
+    font-weight: bold;
+}
+
+.task-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.task-creation-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+    flex-flow: row;
+    flex-wrap: nowrap;
+}
+
+.dropdown-content a:first-of-type{
+    border-bottom: 1px solid #06171e;
 }
 
 .notify:not(:last-child) {
