--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -2,103 +2,110 @@
 <div class="mail-detail">
     <div>
         <div class="mail-detail-header">
-        <div class="mail-detail-profile">
-            <img src="/static/media/no-picture-avatar.png" alt=""
-                 class="members inbox-detail"/>
-            <div class="mail-detail-name">Fun Track User</div>
-        </div>
-        <div class="mail-icons">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                 class="feather feather-trash-2">
-                <path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2M10 11v6M14 11v6"/>
-            </svg>
-            <a href="{% url 'update_task' task_id %}"><svg style="text-align: center" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="hover-effect feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg></a>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                 class="feather feather-tag">
-                <path d="M20.59 13.41l-7.17 7.17a2 2 0 01-2.83 0L2 12V2h10l8.59 8.59a2 2 0 010 2.82zM7 7h.01"/>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                 class="feather feather-check-square">
-                <path d="M9 11l3 3L22 4"/>
-                <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                 class="feather feather-paperclip">
-                <path
-                        d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
-            </svg>
-        </div>
-    </div>
-    <div class="mail-contents">
-        <div class="mail-contents-subject">
-            <input type="checkbox" name="msg" id="mail20" class="mail-choice" checked>
-            <label for="mail20"></label>
-            <div class="mail-contents-title">{{ task_name }}</div>
-        </div>
-        <div class="mail">
-            <div class="mail-time">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                     stroke-linejoin="round" class="feather feather-clock">
-                    <circle cx="12" cy="12" r="10"/>
-                    <path d="M12 6v6l4 2"/>
+            <div class="mail-detail-profile">
+                <img src="/static/media/no-picture-avatar.png" alt=""
+                     class="members inbox-detail"/>
+                <div class="mail-detail-name">Fun Track User</div>
+            </div>
+            <div class="mail-icons">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="feather feather-trash-2">
+                    <path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2M10 11v6M14 11v6"/>
                 </svg>
-                12 Mar, 2019
+                <a href="{% url 'update_task' task_id %}">
+                    <svg style="text-align: center" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                         stroke-linejoin="round" class="hover-effect feather feather-edit">
+                        <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                        <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                    </svg>
+                </a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="feather feather-tag">
+                    <path d="M20.59 13.41l-7.17 7.17a2 2 0 01-2.83 0L2 12V2h10l8.59 8.59a2 2 0 010 2.82zM7 7h.01"/>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="feather feather-check-square">
+                    <path d="M9 11l3 3L22 4"/>
+                    <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="feather feather-paperclip">
+                    <path
+                            d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
+                </svg>
             </div>
-            <div class="mail-inside">{{ task_description }}
+        </div>
+        <div class="mail-contents">
+            <div class="mail-contents-subject">
+                <input type="checkbox" name="msg" id="mail20" class="mail-choice" checked>
+                <label for="mail20"></label>
+                <div class="mail-contents-title">{{ task_name }}</div>
             </div>
-            <div class="mail-assign">
-                <div class="assignee">
-                    <strong>{{ task_creator }} </strong> created task
-                    <span class="assign-date">on {{ task_updated }} </span>
+            <div class="mail">
+                <div class="mail-time">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                         stroke-linejoin="round" class="feather feather-clock">
+                        <circle cx="12" cy="12" r="10"/>
+                        <path d="M12 6v6l4 2"/>
+                    </svg>
+                    12 Mar, 2019
                 </div>
-            </div>
-            {% for comment_creator, comment_body in comments.items %}
+                <div class="mail-inside">{{ task_description }}
+                </div>
                 <div class="mail-assign">
                     <div class="assignee">
-                        <strong>{{ comment_creator }} </strong> :
-                        <span class="assign-date"> {{ comment_body }} </span>
+                        <strong>{{ task_creator }} </strong> created task
+                        <span class="assign-date">on {{ task_updated }} </span>
                     </div>
                 </div>
-            {% endfor %}
-            <div class="mail-checklist">
-                <input type="checkbox" name="msg" id="mail30" class="mail-choice" checked>
-                <label for="mail30">George completed this task.</label>
-                <div class="mail-checklist-date">Today</div>
-            </div>
-            <div class="mail-doc">
-                <div class="mail-doc-wrapper">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                         stroke="currentColor" stroke-width="1.6" stroke-linecap="round"
-                         stroke-linejoin="round" class="feather feather-file-text">
-                        <path d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8z"/>
-                        <path d="M14 2v6h6M16 13H8M16 17H8M10 9H8"/>
-                    </svg>
-                    <div class="mail-doc-detail">
-                        <div class="mail-doc-name">Article.docx</div>
-                        <div class="mail-doc-date">added 17 May, 2020</div>
+                {% for comment_creator, comment_body in comments.items %}
+                    <div class="mail-assign">
+                        <div class="assignee">
+                            <strong>{{ comment_creator }} </strong> :
+                            <span class="assign-date"> {{ comment_body }} </span>
+                        </div>
                     </div>
+                {% endfor %}
+                <div class="mail-checklist">
+                    <input type="checkbox" name="msg" id="mail30" class="mail-choice" checked>
+                    <label for="mail30">George completed this task.</label>
+                    <div class="mail-checklist-date">Today</div>
                 </div>
-                <div class="mail-doc-icons">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                         stroke-linejoin="round" class="feather feather-trash-2">
-                        <path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2M10 11v6M14 11v6"/>
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                         stroke-linejoin="round" class="feather feather-download-cloud">
-                        <path d="M8 17l4 4 4-4M12 12v9"/>
-                        <path d="M20.88 18.09A5 5 0 0018 9h-1.26A8 8 0 103 16.29"/>
-                    </svg>
+                <div class="mail-doc">
+                    <div class="mail-doc-wrapper">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                             stroke="currentColor" stroke-width="1.6" stroke-linecap="round"
+                             stroke-linejoin="round" class="feather feather-file-text">
+                            <path d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8z"/>
+                            <path d="M14 2v6h6M16 13H8M16 17H8M10 9H8"/>
+                        </svg>
+                        <div class="mail-doc-detail">
+                            <div class="mail-doc-name">Article.docx</div>
+                            <div class="mail-doc-date">added 17 May, 2020</div>
+                        </div>
+                    </div>
+                    <div class="mail-doc-icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                             stroke-linejoin="round" class="feather feather-trash-2">
+                            <path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2M10 11v6M14 11v6"/>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                             stroke-linejoin="round" class="feather feather-download-cloud">
+                            <path d="M8 17l4 4 4-4M12 12v9"/>
+                            <path d="M20.88 18.09A5 5 0 0018 9h-1.26A8 8 0 103 16.29"/>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <form method="post" action="{% url 'task_comment' %}">
         {% csrf_token %}
@@ -115,16 +122,16 @@
                                 d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
                     </svg>
                 </div>
-                <div class="send">
-                    <label>
-                        <input type="submit" style="display: none">
+                <label>
+                    <input type="submit" style="display: none">
+                    <div class="send">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                              fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                              stroke-linejoin="round" class="feather feather-send">
                             <path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/>
                         </svg>
-                    </label>
-                </div>
+                    </div>
+                </label>
             </div>
         </div>
     </form>
